// Messages sent from the planner to the client
// should just be whats absolutely nessisary for operation as planner should log required info for debugging and replay

syntax = "proto3";
package messages.diagnostic;

import "path.proto";

message Diagnostic {
  float actual_speed = 1;
  float actual_turn = 2;
  float framerate_avg = 3;
  float framerate_90 = 4;
}

message FullDiagnostic {
  messages.path.Path path = 1;
  messages.path.MapUpdate map_update = 2;
  Diagnostic diagnostic = 3;
}
